my photos aren't working >.<

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         available.
       </p>
       <div class="photos">
-        <img alt="image of the Menominee website in the full desktop screen only contrast and some other design choices look off" src="/assets/site.jpg">
+        <img alt="image of the Menominee website in the full desktop screen only contrast and some other design choices look off" src="assets/site.jpg">
       </div>
       <p>
         The first problem that stuck out to me was that the website wasn't
@@ -69,7 +69,7 @@
         couldn't click, and I was even surprised by a button.
       </p>
       <div class="photos">
-        <img alt="image of the Menominee website this time the browser window shrunken so that test is overlapping the whole navbar cannot be accessed" src="/assets/not_responsive_sc.jpg">
+        <img alt="image of the Menominee website this time the browser window shrunken so that test is overlapping the whole navbar cannot be accessed" src="assets/not_responsive_sc.jpg">
       </div>      
       <p>
         As I inspected the code I also noticed that there wasn't an alt tag for
@@ -94,8 +94,8 @@
         the website.
       </p>
       <div class="photos">
-        <img alt="image of a regular white paper that has been folded into 9 squares. It has a different sketch in red pen on each square, some designs are more similar to each other than others." src="/assets/nine_sketches.jpg">
-        <img alt="image of a handdrawn final sketch. It is messy but a more well thought out idea than the sketches" src="/assets/final_sketch.jpg">
+        <img alt="image of a regular white paper that has been folded into 9 squares. It has a different sketch in red pen on each square, some designs are more similar to each other than others." src="assets/nine_sketches.jpg">
+        <img alt="image of a handdrawn final sketch. It is messy but a more well thought out idea than the sketches" src="assets/final_sketch.jpg">
       </div>
       <p>
         After making my final sketch I started on wireframing. I didn't really
@@ -111,9 +111,9 @@
         interfaces.
       </p>
       <div class="photos">
-        <img alt="image of a handdrawn desktop wireframe. It is a bit messy but the idea is able to be understood."src="/assets/desktop_wireframe.jpg">
-        <img alt="image of a handdrawn tablet wireframe. It is a bit messy but the idea is able to be understood."src="/assets/tablet_wireframe.jpg">
-        <img alt="image of a handdrawn phone wireframe. It is a bit messy but the idea is able to be understood."src="/assets/phone_wireframe.jpg">
+        <img alt="image of a handdrawn desktop wireframe. It is a bit messy but the idea is able to be understood."src="assets/desktop_wireframe.jpg">
+        <img alt="image of a handdrawn tablet wireframe. It is a bit messy but the idea is able to be understood."src="assets/tablet_wireframe.jpg">
+        <img alt="image of a handdrawn phone wireframe. It is a bit messy but the idea is able to be understood."src="assets/phone_wireframe.jpg">
       </div>
       <p>
         It was a bit difficult to create the Style Guide for this website. I
@@ -130,7 +130,7 @@
         icons because the page I chose didn't use them.
       </p>
       <div class="photos">
-        <img alt="a screenshot of a Figma frame. There are 6 colors, all various shades of green and blue. There are multiple iterations of buttons, how text should look, and how certain dropdown menu's/navbars would look." src="/assets/style_guide.jpg">
+        <img alt="a screenshot of a Figma frame. There are 6 colors, all various shades of green and blue. There are multiple iterations of buttons, how text should look, and how certain dropdown menu's/navbars would look." src="assets/style_guide.jpg">
       </div>
       <p>
         Creating the High Fideltiy Mockups was my favorite part of the
@@ -144,9 +144,9 @@
         before working on the actual redesign.
       </p>
       <div class="photos">
-        <img alt="screenshot of figma prototype of a laptop there is a high fidelity screen that is a mockup of what the webiste should have looked like." src="/assets/laptop_mockup.jpg">
-        <img alt="screenshot of figma prototype of a tablet there is a high fidelity screen that is a mockup of what the webiste should have looked like."src="/assets/tablet_mockup.jpg">
-        <img alt="screenshot of figma prototype of a phone there is a high fidelity screen that is a mockup of what the webiste should have looked like."src="/assets/phone_mockup.jpg">
+        <img alt="screenshot of figma prototype of a laptop there is a high fidelity screen that is a mockup of what the webiste should have looked like." src="assets/laptop_mockup.jpg">
+        <img alt="screenshot of figma prototype of a tablet there is a high fidelity screen that is a mockup of what the webiste should have looked like."src="assets/tablet_mockup.jpg">
+        <img alt="screenshot of figma prototype of a phone there is a high fidelity screen that is a mockup of what the webiste should have looked like."src="assets/phone_mockup.jpg">
       </div>
     </div>
     <div id="part3">
@@ -170,7 +170,7 @@
         forgot to change other font sizes.
       </p>
       <div class="photos">
-        <img src="/assets/redesign_sc.jpg" alt="screenshot of the redesigned page!">
+        <img src="assets/redesign_sc.jpg" alt="screenshot of the redesigned page!">
       </div>
 
       <p>
